# budgeting-app

./: .gitattributes  .gitignore  CLAUDE.md  PROGRESS.md  docker-compose.yml  package.json
apps/api/: README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 8b3b6ef5aa6c_initial_schema.py  c9e436481390_initial_schema.py
apps/api/app/: config.py  crud.py  db.py  main.py
apps/api/app/models/: __init__.py  account.py  budget.py  category.py  enums.py  transaction.py  user.py
apps/api/app/routers/: __init__.py  accounts.py  budgets.py  categories.py  transactions.py
apps/api/app/schemas/: __init__.py  account.py  base.py  budget.py  category.py  common.py  transaction.py  user.py
apps/api/scripts/: seed.py
docs/: CODE_STYLE.md  DATA_MODEL.md  DECISIONS.md  NEXT.md  REVIEW.md  SETUP.md
